--- a/index.html
+++ b/index.html
@@ -1,65 +1,197 @@
-<!doctype html>
-<!--[if lt IE 9]><html class="ie"><![endif]-->
-<!--[if gte IE 9]><!--><html><!--<![endif]-->
+<!DOCTYPE html>
 
-<!--
-	The comment jumble above is handy for targeting old IE with CSS.
-	http://paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/
--->
-	
-	<head>
-		<meta charset="utf-8"/>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-		<title>Golden Grid System Demo</title>
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<head>
+  <meta charset="utf-8" />
+
+  <!-- Set the viewport width to device width for mobile -->
+  <meta name="viewport" content="width=device-width" />
+
+  <title>Du och jag och pensionärerna</title>
+  
+  <!-- Included CSS Files (Uncompressed) -->
+  <!--
+  <link rel="stylesheet" href="stylesheets/foundation.css">
+  -->
+  
+  <!-- Included CSS Files (Compressed) -->
+  <link rel="stylesheet" href="stylesheets/foundation.min.css">
+  <link rel="stylesheet" href="stylesheets/app.css">
+  <link rel="stylesheet" href="stylesheets/footer.css">
+
+  <script src="javascripts/modernizr.foundation.js"></script>
+
+  <!-- IE Fix for HTML5 Tags -->
+  <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+
+</head>
+<body>
+
+<div id="wrap">
+	<div id="main">
+		<br><br>
 		
-		<!-- Please don't add "maximum-scale=1" here. It's bad for accessibility. -->
-		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		
-		<!-- Feel free to split the CSS into separate files, if you like. -->
-		<link rel="stylesheet" href="GGS.css"/> 
-		
-		<!-- Here's Golden Gridlet, the grid overlay script. -->
-		<script src="GGS.js"></script>
-		
-		<!-- 
-			This script enables structural HTML5 elements in old IE.
-			http://code.google.com/p/html5shim/
-		-->
-		<!--[if lt IE 9]>
-			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
-	</head>
-	
-	<body lang="en">
-		
-		<!-- Demo code begins -->
-		
-		<header>
-			<div class="wrapper">
-				<h1>A Golden Demonstration</h1>
-				<h2>
-					Try resizing your browser or viewing this page on different devices. Use the icon in the upper right corner to see an overlay of the grid.
-				</h2>
+		<!-- LOGO -->
+		<div class="row hide-for-small">
+			<div class="twelve columns">
+				<img src="images/logo.png" />
+				<div id="logo-text">
+					<h1>We make apps. <span class="bluetext">Do you want one?</span></h1>
+				</div>
 			</div>
-		</header>
+		</div>
 		
-		<article id="twoway">
-			<section class="wrapper">
-				<h3>A two-way split</h3>
-				<p>
-					These two blocks of text will float side by side with some empty columns on the sides on large screens. On medium-sized screens the empty columns will disappear, and on small screens the blocks will be stacked vertically.
-				</p>
-			</section>
-			<section class="wrapper">
-				<h3>By the way</h3>
-				<p>
-					If you're viewing this page on an iOS device, it might zoom in wonkily when you rotate your device. This is because of <a href="http://filamentgroup.com/examples/iosScaleBug/">a Mobile Safari bug</a>.
-				</p>
-			</section>
-		</article>
-		
-		<!-- Demo code ends -->
+		<div class="row show-for-small">
+			<div class="twelve columns">
+				<img src="images/logosmall.png" />
+				<div id="logo-text-left">
+					<h1>We make apps.<br><span class="bluetext">Do you want one??</span></h1>
+				</div>
+			</div>
+		</div>
+
+		<!-- SHARE MY LIST -->		
+		<div class="row hide-for-small">
+			<div class="twelve columns">
+				<div id="content">
+					<img id="app-img" src="images/sharemylist.png" />
+					<div id="leftcontent">
+						<div id="leftinnercontent">
+							<h2><span class="bluetext">Share My List</span><h2>
+							<h4>Share My List is a simple, social and elegant app that lets you create, share and collaborate on lists with your friends and family.</h4>
+							<!--<h3><a id="readmore" href="#">Read more…</a></h3>-->
+							<a href="http://itunes.apple.com/us/app/share-my-list/id552825268?l=sv&ls=1&mt=8" target="_new"><img id="appbadge" src="images/appbadge.png" /></a>
+						</div>
+					</div>
+				</div>			
+			</div>
+		</div>	
+
+		<div class="row show-for-small">
+			<br>
+			<div class="twelve columns">
+				<h2><span class="bluetext">Share My List</span><h2>
+				<img id="app-img" src="images/sharemylistsmall.png" />
+				<h4>Share My List is a simple, social and elegant app that lets you create, share and collaborate on lists with your friends and family.</h4>
+				<!--<h3><a id="readmore" href="#">Read more…</a></h3>-->
+				<a href="http://itunes.apple.com/us/app/share-my-list/id552825268?l=sv&ls=1&mt=8" target="_new"><img id="appbadge" src="images/appbadge.png" /></a>
+			</div>
+		</div>	
 			
-	</body>
+		<!-- ATLAS -->
+		<div class="row hide-for-small">
+			<div class="twelve columns">
+				<div id="content">
+					<img id="app-img" src="images/atlas.png" />
+					<div id="rightcontent">
+						<h2><span class="bluetext">Atlas Losing Grip</span><h2>
+						<h4>Atlas Losing Grips' official application for iPhone and iPod touch. Listen to songs, read their Tumblr tour diary and Facebook status updates. Watch videos from their Youtube channel, both official music videos and live videos. Keep up to date with all things Atlas Losing Grip.</h4>
+						<!--<h3><a href="">Read more…</a></h3>-->
+						<a href="http://itunes.apple.com/us/app/atlas-losing-grip/id435793054?l=sv&ls=1&mt=8" target="_new"><img id="appbadge" src="images/appbadge.png" /></a>
+					</div>
+				</div>
+			</div>
+		</div>	
+
+		<div class="row show-for-small">
+			<br><br>
+			<div class="twelve columns">
+				<h2><span class="bluetext">Atlas Losing Grip</span><h2>
+				<img id="app-img" src="images/atlassmall.png" />
+				<h4>Atlas Losing Grips' official application for iPhone and iPod touch. Listen to songs, read their Tumblr tour diary and Facebook status updates. Watch videos from their Youtube channel, both official music videos and live videos. Keep up to date with all things Atlas Losing Grip.</h4>
+				<!--<h3><a href="">Read more…</a></h3>-->
+				<a href="http://itunes.apple.com/us/app/atlas-losing-grip/id435793054?l=sv&ls=1&mt=8" target="_new"><img id="appbadge" src="images/appbadge.png" /></a>
+			</div>
+		</div>	
+			
+		<!-- COMIC -->
+		<div class="row hide-for-small">
+			<div class="twelve columns">
+				<div id="content">
+					<img id="app-img" src="images/comic.png" />
+					<div id="leftcontent">
+						<h2><span class="bluetext">Comic Reader</span><h2>
+						<h4>Read comics on your iPhone or iPod touch.</h4>
+						<!--<h3><span class="bluetext">Read more…</span></h3>-->
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<div class="row show-for-small">
+			<br><br>
+			<div class="twelve columns">
+				<h2><span class="bluetext">Comic Reader</span><h2>
+				<img id="app-img" src="images/comicsmall.png" />
+				<h4>Read comics on your iPhone or iPod touch.</h4>
+				<!--<h3><span class="bluetext">Read more…</span></h3>-->
+			</div>
+		</div>
+		
+	</div>
+</div>
+
+<div id="footer">
+	<div class="row hide-for-small">
+		<div class="twelve columns">
+			<p class="copyright">Copyright &copy; 2012 / du och jag och pensionärerna / All Rights Reserved</p>
+			<p class="twitter"><a href="https://twitter.com/ochpanshisarna" target="_new" title="Link to du och jag och pensionärerna twitter account"><img src="images/twitter.png" /></a></p>
+			<p class="mail"><a href="mailto:contact@duochjagochpensionarerna.se" title="Contact us"><img src="images/mail.png" /></a></p>
+		</div>
+	</div>
 	
+	<div class="row show-for-small">
+		<div class="twelve columns">
+			<p class="copyright">&copy; 2012 / du och jag och pensionärerna / All Rights Reserved</p>
+			<p class="twitter-left"><a href="https://twitter.com/ochpanshisarna" target="_new" title="Link to du och jag och pensionärerna twitter account"><img src="images/twitter.png" /></a></p>
+			<p class="mail-left"><a href="mailto:contact@duochjagochpensionarerna.se" title="Contact us"><img src="images/mail.png" /></a></p>
+		</div>
+	</div>
+
+</div>
+
+  <!-- Included JS Files (Uncompressed) -->
+  <!--
+  
+  <script src="javascripts/jquery.js"></script>
+  
+  <script src="javascripts/jquery.foundation.mediaQueryToggle.js"></script>
+  
+  <script src="javascripts/jquery.foundation.forms.js"></script>
+  
+  <script src="javascripts/jquery.foundation.reveal.js"></script>
+  
+  <script src="javascripts/jquery.foundation.orbit.js"></script>
+  
+  <script src="javascripts/jquery.foundation.navigation.js"></script>
+  
+  <script src="javascripts/jquery.foundation.buttons.js"></script>
+  
+  <script src="javascripts/jquery.foundation.tabs.js"></script>
+  
+  <script src="javascripts/jquery.foundation.tooltips.js"></script>
+  
+  <script src="javascripts/jquery.foundation.accordion.js"></script>
+  
+  <script src="javascripts/jquery.placeholder.js"></script>
+  
+  <script src="javascripts/jquery.foundation.alerts.js"></script>
+  
+  <script src="javascripts/jquery.foundation.topbar.js"></script>
+  
+  -->
+  
+  <!-- Included JS Files (Compressed) -->
+  <script src="javascripts/jquery.js"></script>
+  <script src="javascripts/foundation.min.js"></script>
+  
+  <!-- Initialize JS Plugins -->
+  <script src="javascripts/app.js"></script>
+</body>
 </html>
