--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<div class="twelve columns">
 				<img src="images/logosmall.png" />
 				<div id="logo-text-left">
-					<h1>We make apps.<br><span class="bluetext">Do you want one??</span></h1>
+					<h1>We make apps.<br><span class="bluetext">Do you want one?</span></h1>
 				</div>
 			</div>
 		</div>
