--- a/index.html
+++ b/index.html
@@ -138,54 +138,35 @@
 </div>
 
 <div id="footer">
-	<div class="row hide-for-small">
+	<div class="row">
 		<div class="twelve columns">
-			<p class="copyright">Copyright &copy; 2012 / du och jag och pensionärerna / All Rights Reserved</p>
+			<p class="copyright">&copy; 2012 / du och jag och pensionärerna</p>
 			<p class="twitter"><a href="https://twitter.com/ochpanshisarna" target="_new" title="Link to du och jag och pensionärerna twitter account"><img src="images/twitter.png" /></a></p>
 			<p class="mail"><a href="mailto:contact@duochjagochpensionarerna.se" title="Contact us"><img src="images/mail.png" /></a></p>
 		</div>
 	</div>
 	
-	<div class="row show-for-small">
+<!--	<div class="row show-for-small">
 		<div class="twelve columns">
-			<p class="copyright">&copy; 2012 / du och jag och pensionärerna / All Rights Reserved</p>
-			<p class="twitter-left"><a href="https://twitter.com/ochpanshisarna" target="_new" title="Link to du och jag och pensionärerna twitter account"><img src="images/twitter.png" /></a></p>
-			<p class="mail-left"><a href="mailto:contact@duochjagochpensionarerna.se" title="Contact us"><img src="images/mail.png" /></a></p>
+			<p class="twitter">
+				<a href="https://twitter.com/ochpanshisarna" target="_new" title="Link to du och jag och pensionärerna twitter account">
+					<img src="images/twitter.png" />
+				</a>
+			</p>
+			<p class="mail">
+				<a href="mailto:contact@duochjagochpensionarerna.se" title="Contact us">
+					<img src="images/mail.png" />
+				</a>
+			</p>
 		</div>
 	</div>
+	<div class="row show-for-small">
+		<div class="twelve columns">		
+			<p class="copyright">&copy; 2012 / du och jag och pensionärerna</p>		
+		</div>
+	</div>	-->
 
 </div>
-
-  <!-- Included JS Files (Uncompressed) -->
-  <!--
-  
-  <script src="javascripts/jquery.js"></script>
-  
-  <script src="javascripts/jquery.foundation.mediaQueryToggle.js"></script>
-  
-  <script src="javascripts/jquery.foundation.forms.js"></script>
-  
-  <script src="javascripts/jquery.foundation.reveal.js"></script>
-  
-  <script src="javascripts/jquery.foundation.orbit.js"></script>
-  
-  <script src="javascripts/jquery.foundation.navigation.js"></script>
-  
-  <script src="javascripts/jquery.foundation.buttons.js"></script>
-  
-  <script src="javascripts/jquery.foundation.tabs.js"></script>
-  
-  <script src="javascripts/jquery.foundation.tooltips.js"></script>
-  
-  <script src="javascripts/jquery.foundation.accordion.js"></script>
-  
-  <script src="javascripts/jquery.placeholder.js"></script>
-  
-  <script src="javascripts/jquery.foundation.alerts.js"></script>
-  
-  <script src="javascripts/jquery.foundation.topbar.js"></script>
-  
-  -->
   
   <!-- Included JS Files (Compressed) -->
   <script src="javascripts/jquery.js"></script>
