--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
 		</div>
 		
 		<div class="row show-for-small">
+		<div class="panel">
 			<div class="twelve columns">
-				<img src="images/logosmall.png" />
-				<div id="logo-text-left">
+				<img src="images/logosmall.png" style="width:80px"/>
+				<div id="logo-text">
 					<h1>We make apps.<br><span class="bluetext">Do you want one?</span></h1>
 				</div>
+			</div>
 			</div>
 		</div>
 
@@ -73,8 +75,8 @@
 			</div>
 		</div>	
 
-		<div class="panel">
-			<div class="row show-for-small">
+		<div class="row show-for-small">
+			<div class="panel">
 				<div class="twelve columns">
 					<h2><span class="bluetext">Share My List</span><h2>
 					<img id="app-img" src="images/sharemylistsmall.png" />
@@ -100,8 +102,8 @@
 			</div>
 		</div>	
 
-		<div class="panel">
-			<div class="row show-for-small">
+		<div class="row show-for-small">
+			<div class="panel">
 				<div class="twelve columns">
 					<h2><span class="bluetext">Atlas Losing Grip</span><h2>
 					<img id="app-img" src="images/atlassmall.png" />
@@ -125,9 +127,9 @@
 				</div>
 			</div>
 		</div>
-		
-		<div class="panel">
-			<div class="row show-for-small">
+				
+		<div class="row show-for-small">
+			<div class="panel">
 				<div class="twelve columns">
 					<h2><span class="bluetext">Comic Reader</span><h2>
 					<img id="app-img" src="images/comicsmall.png" />
