--- a/index.html
+++ b/index.html
@@ -48,13 +48,11 @@
 		</div>
 		
 		<div class="row show-for-small">
-		<div class="panel">
 			<div class="twelve columns">
-				<img src="images/logosmall.png" style="width:80px"/>
-				<div id="logo-text">
-					<h1>We make apps.<br><span class="bluetext">Do you want one?</span></h1>
+				<img src="images/logo.png"/>
+				<div id="logo-text-left">
+					<h2>We make apps.<span class="bluetext">Do you want one?</span></h2>
 				</div>
-			</div>
 			</div>
 		</div>
 
