--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 		
 		<div class="row show-for-small">
 			<div class="twelve columns">
-				<img src="images/logo.png"/>
-				<div id="logo-text-left">
+				<img src="images/logosmall.png"/>
+				<!--<div id="logo-text-left">
 					<h2>We make apps.<span class="bluetext">Do you want one?</span></h2>
-				</div>
+				</div>-->
 			</div>
 		</div>
 
