--- a/index.html
+++ b/index.html
@@ -56,6 +56,38 @@
 			</div>
 		</div>
 
+		<ul class="accordion show-for-small">
+        	<li>
+            	<div class="title">
+               		<h5 >Share My List</h5>
+              	</div>
+              	<div class="content">
+                	<p>Share My List is a simple, social and elegant app that lets you create, share and collaborate on lists with your friends and family.</p>
+                	<div class="flex-video widescreen">
+						<iframe width="640" height="390" src="http://www.youtube.com/embed/oXWZCOp75g8" frameborder="0" allowfullscreen></iframe>
+					</div>
+              	</div>
+            </li>
+        	<li>
+            	<div class="title">
+               		<h5>Atlas Losing Grip</h5>
+              	</div>
+              	<div class="content">
+                	<p>Atlas Losing Grips' official application for iPhone and iPod touch. Listen to songs, read their Tumblr tour diary and Facebook status updates. Watch videos from their Youtube channel, both official music videos and live videos. Keep up to date with all things Atlas Losing Grip.</p>
+              	</div>
+            </li>
+        	<li>
+            	<div class="title">
+               		<h5 >Comic Reader</h5>
+              	</div>
+              	<div class="content">
+                	<p>Read comics on your iPhone or iPod touch.</p>
+              	</div>
+            </li>
+		</ul>
+
+
+
 		<!-- SHARE MY LIST -->		
 		<div class="row hide-for-small">
 			<div class="twelve columns">
@@ -74,15 +106,13 @@
 		</div>	
 
 		<div class="row show-for-small">
-			<div class="panel">
-				<div class="twelve columns">
-					<h2><span class="bluetext">Share My List</span><h2>
-					<img id="app-img" src="images/sharemylistsmall.png" />
-					<h4>Share My List is a simple, social and elegant app that lets you create, share and collaborate on lists with your friends and family.</h4>
-					<!--<h3><a id="readmore" href="#">Read more…</a></h3>-->
-					<a href="http://itunes.apple.com/us/app/share-my-list/id552825268?l=sv&ls=1&mt=8" target="_new"><img id="appbadge" src="images/appbadge.png" /></a>
-				</div>
-			</div>	
+			<div class="twelve columns">
+				<h2><span class="bluetext">Share My List</span><h2>
+				<img id="app-img" src="images/sharemylistsmall.png" />
+				<h4>Share My List is a simple, social and elegant app that lets you create, share and collaborate on lists with your friends and family.</h4>
+				<!--<h3><a id="readmore" href="#">Read more…</a></h3>-->
+				<a href="http://itunes.apple.com/us/app/share-my-list/id552825268?l=sv&ls=1&mt=8" target="_new"><img id="appbadge" src="images/appbadge.png" /></a>
+			</div>
 		</div>
 					
 		<!-- ATLAS -->
@@ -101,15 +131,13 @@
 		</div>	
 
 		<div class="row show-for-small">
-			<div class="panel">
-				<div class="twelve columns">
-					<h2><span class="bluetext">Atlas Losing Grip</span><h2>
-					<img id="app-img" src="images/atlassmall.png" />
-					<h4>Atlas Losing Grips' official application for iPhone and iPod touch. Listen to songs, read their Tumblr tour diary and Facebook status updates. Watch videos from their Youtube channel, both official music videos and live videos. Keep up to date with all things Atlas Losing Grip.</h4>
-					<!--<h3><a href="">Read more…</a></h3>-->
-					<a href="http://itunes.apple.com/us/app/atlas-losing-grip/id435793054?l=sv&ls=1&mt=8" target="_new"><img id="appbadge" src="images/appbadge.png" /></a>
-				</div>
-			</div>	
+			<div class="twelve columns">
+				<h2><span class="bluetext">Atlas Losing Grip</span><h2>
+				<img id="app-img" src="images/atlassmall.png" />
+				<h4>Atlas Losing Grips' official application for iPhone and iPod touch. Listen to songs, read their Tumblr tour diary and Facebook status updates. Watch videos from their Youtube channel, both official music videos and live videos. Keep up to date with all things Atlas Losing Grip.</h4>
+				<!--<h3><a href="">Read more…</a></h3>-->
+				<a href="http://itunes.apple.com/us/app/atlas-losing-grip/id435793054?l=sv&ls=1&mt=8" target="_new"><img id="appbadge" src="images/appbadge.png" /></a>
+			</div>
 		</div>
 			
 		<!-- COMIC -->
@@ -127,13 +155,11 @@
 		</div>
 				
 		<div class="row show-for-small">
-			<div class="panel">
-				<div class="twelve columns">
-					<h2><span class="bluetext">Comic Reader</span><h2>
-					<img id="app-img" src="images/comicsmall.png" />
-					<h4>Read comics on your iPhone or iPod touch.</h4>
-					<!--<h3><span class="bluetext">Read more…</span></h3>-->
-				</div>
+			<div class="twelve columns">
+				<h2><span class="bluetext">Comic Reader</span><h2>
+				<img id="app-img" src="images/comicsmall.png" />
+				<h4>Read comics on your iPhone or iPod touch.</h4>
+				<!--<h3><span class="bluetext">Read more…</span></h3>-->
 			</div>
 		</div>		
 	</div>
