--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		</div>
 
 		<ul class="accordion show-for-small">
-        	<li clas="active">
+        	<li class="active">
             	<div class="title">
                		<h5 >Share My List</h5>
               	</div>
