--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
 			<ul class="accordion show-for-small">
 	        	<li class="active">
 	            	<div class="title">
+	            		<div class="titleimg">
+							<img id="smallicon" src="images/sharemylisticon.png" />
+		        		</div>
 	               		<h5 >Share My List</h5>
 	              	</div>
 	              	<div class="content">
@@ -76,6 +79,9 @@
 	            </li>
 	        	<li>
 	            	<div class="title">
+	            		<div class="titleimg">
+							<img id="smallicon" src="images/atlasicon.png" />
+		        		</div>
 	               		<h5>Atlas Losing Grip</h5>
 	              	</div>
 	              	<div class="content">
