--- a/test2/index1.html
+++ b/test2/index1.html
@@ -116,7 +116,7 @@
 								<!--<h3><a id="readmore" href="#">Read more…</a></h3>-->
 								<a href="http://itunes.apple.com/us/app/share-my-list/id552825268?l=sv&ls=1&mt=8" target="_new"><img id="appbadge" src="images/appbadge.png" /></a>
 								<br>
-								<div class="fb-like-box" data-href="http://www.facebook.com/sharemylistapp" data-width="292" data-height="150" data-show-faces="false" data-stream="false" data-header="false"></div>
+								<div class="fb-like-box" data-href="http://www.facebook.com/sharemylistapp" data-width="292" data-show-faces="false" data-stream="false" data-header="false"></div>
 							</div>
 						</div>
 					</div>			
