--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
 </head>
 <body>
 
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=270442449684221";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 	<div id="wrap">
 		<div id="main">
 			<br><br>
@@ -106,6 +115,8 @@
 								<h4>Share My List is a simple, social and elegant app that lets you create, share and collaborate on lists with your friends and family.</h4>
 								<!--<h3><a id="readmore" href="#">Read more…</a></h3>-->
 								<a href="http://itunes.apple.com/us/app/share-my-list/id552825268?l=sv&ls=1&mt=8" target="_new"><img id="appbadge" src="images/appbadge.png" /></a>
+								<br>
+								<div class="fb-like-box" data-href="http://www.facebook.com/sharemylistapp" data-width="292" data-show-faces="false" data-stream="false" data-header="false"></div>
 							</div>
 						</div>
 					</div>			
