--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<!-- Mobile Specific Metas
   ================================================== -->
-	<!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">-->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<!-- Google Web Fonts
   ================================================== -->
@@ -41,7 +41,7 @@
 
 	<script type="text/javascript" src="scripts/jquery-1.8.3.min.js"></script>          
 	<script type="text/javascript">     
-		$(window).load(function () {
+		/*$(window).load(function () {
 			var currentWidth = $(window).width(); //$(document).width();
 			var allStyleSheets = $("link");
 			allStyleSheets.each(function(){ 
@@ -91,7 +91,7 @@
 			else if (currentWidth <= 767) {			
 				$('head').append('<link href="stylesheets/layoutmax767.css" type="text/css" rel="stylesheet" />');
 			}
-		});
+		});*/
 	</script> 
 </head>
 <body>
