Updated blog href

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
 				<a href="https://twitter.com/ochpanshisarna" target="_new" title="Link to du och jag och pensionärerna twitter account">twitter</a>
 				&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="http://duochjagochpensionarerna.blogspot.se" target="_new">blog</a>
+				<a href="http://duochjagochpensionarerna.tumblr.com" target="_new">blog</a>
 			</p>
 		</div>
 		<!--<hr class="twelve columns offset-by-two" />-->
