--- a/test/index.html
+++ b/test/index.html
@@ -115,8 +115,10 @@
 				<p><img src="images/sharemylistsmall.png" class="scale-with-grid" /> </p>
 				<p>Do you often forget what groceries to buy at the store? Do you have a hard time remembering the name of that movie your friend recommended you? Do you need to have a shared todo list with your colleagues? <br>Share My List is here to help you. Share My List focuses on being simple and elegant and doesn't try to be yet another complex Todo list with a million functions. It does what it does and it does it good.</p> 
 			</div>
-		
-			<!-- Share my list details -->
+		</div>
+		<!-- Share my list details -->
+		<div class="row-fluid">
+			<!-- Share my list info -->
 			<div class="span6">
 				<p><a href="http://itunes.apple.com/us/app/share-my-list/id552825268" target="_new"><img src="images/Download_on_the_App_Store_Badge_US-UK_135x40_0824.png" class="scale-with-grid" /></a></p>
 				<ul class="square">
