--- a/test/index.html
+++ b/test/index.html
@@ -15,43 +15,6 @@
 
 	<!-- Styles -->
 	<link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-	<style type="text/css">
-	body {
-		padding-top: 20px;
-		padding-bottom: 40px;
-	}
-
-	/* Custom container */
-	.container-narrow {
-		margin: 0 auto;
-		max-width: 700px;
-	}
-	.container-narrow > hr {
-		margin: 30px 0;
-	}
-
-	/* Main marketing message and sign up button */
-	.jumbotron {
-		margin: 60px 0;
-		text-align: center;
-	}
-	.jumbotron h1 {
-		font-size: 72px;
-		line-height: 1;
-	}
-	.jumbotron .btn {
-		font-size: 21px;
-		padding: 14px 24px;
-	}
-
-	/* Supporting marketing content */
-	.marketing {
-		margin: 60px 0;
-	}
-	.marketing p + h4 {
-		margin-top: 28px;
-	}
-	</style>
 	<link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 	<link href="stylesheets/layout.css" rel="stylesheet">
 
@@ -87,8 +50,8 @@
 
 	<div class="container-narrow">
 		<!-- Logo -->
-		<div class="jumbotron">
-			<p class="pagetitle">duochjagochpensionärerna</p>
+		<div class="pagetitle">
+			<p>duochjagochpensionärerna</p>
 		</div>
 
 		<!-- Menu -->		
